# liboqs

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.in  appveyor.yml
.CMake/: alg_support.cmake  compiler_flags.cmake  cpu_extensions.cmake  gcc_clang_intrinsics.cmake
.circleci/: config.yml
scripts/: travistest.sh
scripts/copy_from_pqclean/: copy_from_pqclean.py  copy_from_pqclean.yml
scripts/copy_from_pqclean/.CMake/alg_support.cmake/: add_enable_by_alg.fragment
src/: CMakeLists.txt  oqsconfig.h.cmake
src/common/: common.c  common.h  crypto_impl.cmake
src/common/sha3/: sha3_c.c  sha3x4.c
src/common_avx2/: CMakeLists.txt  crypto_impl.cmake
src/common_avx2/sha3/: avx2_unsupported.c  sha3_c.c
src/kem/: kem.c
src/kem/bike/: CMakeLists.txt
src/kem/classic_mceliece/: CMakeLists.txt
src/kem/frodokem/: CMakeLists.txt
src/kem/kyber/: CMakeLists.txt  kem_kyber_1024.c  kem_kyber_1024_90s.c  kem_kyber_512.c  kem_kyber_512_90s.c  kem_kyber_768.c  kem_kyber_768_90s.c
src/kem/kyber/pqclean_kyber1024_90s_avx2/: oqs_unsupported.c
src/kem/kyber/pqclean_kyber1024_avx2/: oqs_unsupported.c
src/kem/kyber/pqclean_kyber512_90s_avx2/: oqs_unsupported.c
src/kem/kyber/pqclean_kyber512_avx2/: oqs_unsupported.c
src/kem/kyber/pqclean_kyber768_90s_avx2/: oqs_unsupported.c
src/kem/kyber/pqclean_kyber768_avx2/: oqs_unsupported.c
src/kem/ledacrypt/: CMakeLists.txt
src/sig/dilithium/: CMakeLists.txt  sig_dilithium_2.c  sig_dilithium_3.c  sig_dilithium_4.c
tests/: CMakeLists.txt  test_namespace.py  test_spdx.sh  test_style.sh
(+7 files in other folders)
